--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-ui-switch",
-  "version": "1.1.0",
-  "description": "switch button for angular2",
+  "version": "1.2.0",
+  "description": "switch button for angular4",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
@@ -22,31 +22,33 @@
   "keywords": [
     "angular2",
     "angular4",
+    "ngx",
+    "ng2",
     "uiswitch",
     "switch",
     "ui"
   ],
   "dependencies": {},
   "devDependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
+    "@angular/http": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
     "@types/jasmine": "^2.2.29",
-    "@types/node": "^4.0.29",
+    "@types/node": "^7.0.12",
     "glob": "^7.1.0",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-beta.12",
-    "ts-loader": "^0.8.2",
+    "rxjs": "5.3.0",
+    "ts-loader": "^2.0.3",
     "typescript": "^2.0.0-beta",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "zone.js": "^0.6.12"
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2",
+    "zone.js": "^0.8.5"
   },
   "bugs": {
     "url": "https://github.com/webcat12345/ngx-ui-switch/issues"
