--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "all-contributors-cli": "^5.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "^6.3.3",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
