--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ after_success:
 jobs:
   include:
     - stage: deploy github pages
-      if: branch = master
+      if: branch = master AND head_branch IS BLANK
       script:
         - yarn build:demo
         - yarn typedoc
