--- a/renovate.json
+++ b/renovate.json
@@ -33,6 +33,9 @@
     "@angular/router",
     "@angular-devkit/build-angular",
     "all-contributors-cli",
+    "karma",
+    "karma-cli",
+    "karma-coverage-istanbul-reporter",
     "rxjs",
     "tslint",
     "typedoc",
