--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --aot",
-    "build": "rimraf dist && ts-node build.ts",
+    "build": "rimraf dist && ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --prod --base-href=/ngx-ui-switch/demo/ --output-path=demo",
     "release": "cd dist/packages-dist && yarn publish",
     "bundlesize": "bundlesize",
@@ -34,55 +34,56 @@
     "lint:ngx-ui-switch": "ng lint ngx-ui-switch --type-check",
     "e2e": "ng e2e",
     "e2e:ci": "ng e2e --protractor-config=protractor-ci.conf.js",
-    "typedoc": "typedoc --options typedoc.json ngx-ui-switch.ts src/*.ts && ts-node docs.ts"
+    "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@angular/router": "^7.0.0",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
-    "rxjs": "^6.3.3",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.2",
+    "tslib": "^1.9.0",
+    "web-animations-js": "github:angular/web-animations-js#release_pr208",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.0",
-    "@angular/cli": "^7.0.0",
-    "@angular/compiler-cli": "^7.0.0",
-    "@angular/language-service": "^7.0.0",
-    "@types/jasmine": "^2.6.0",
-    "@types/jasminewd2": "^2.0.3",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.0.30",
     "all-contributors-cli": "^5.10.0",
-    "bundlesize": "^0.17.0",
-    "codelyzer": "^4.0.2",
+    "bundlesize": "^0.17.2",
+    "codelyzer": "^5.0.0",
     "copy": "^0.3.1",
     "fs-extra": "^7.0.0",
-    "jasmine-core": "^2.8.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "node-sass": "^4.12.0",
     "protractor": "^5.1.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.52.1",
     "rollup-plugin-filesize": "^1.4.2",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "ts-node": "^4.0.1",
-    "tsickle": "^0.33.0",
+    "ts-node": "^7.0.0",
+    "tsickle": "^0.35.0",
     "tslint": "^5.7.0",
-    "typedoc": "^0.8.0",
-    "typescript": "~3.1.3"
+    "typedoc": "^0.14.2",
+    "typescript": "~3.4.5"
   },
   "angular-cli": {},
   "bundlesize": [
@@ -90,5 +91,8 @@
       "path": "./dist/packages-dist/ui-switch.umd.js",
       "maxSize": "8 kB"
     }
-  ]
+  ],
+  "resolutions": {
+    "fsevents": "^1.2.7"
+  }
 }
