ci(travis): Only deploy GH pages on tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ after_success:
 jobs:
   include:
     - stage: deploy github pages
-      if: branch = master AND head_branch IS BLANK
+      if: tag IS present
       script:
         - yarn build:demo
         - yarn typedoc
