--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,39 @@
-dist: trusty
-sudo: false
-
 cache:
   yarn: true
 
 language: node_js
+os: linux
 node_js:
   - 12
 
 addons:
   chrome: stable
 
-# https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-the-Chrome-addon-in-the-headless-mode
-before_install:
-  # start your web application and listen on `localhost`
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:4200 &
-
-before_script:
-  - 'sudo chown root /opt/google/chrome/chrome-sandbox'
-  - 'sudo chmod 4755 /opt/google/chrome/chrome-sandbox'
-script:
-  - yarn build
-  - yarn build:demo
-  - yarn bundlesize
-  - yarn lint:ngx-ui-switch
-  - yarn test:ci
-  - yarn e2e:ci
-  - yarn typedoc
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+stages:
+  - build
+  - deploy github pages
 
 jobs:
   include:
+    - stage: build
+      # https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-the-Chrome-addon-in-the-headless-mode
+      before_install:
+        # start your web application and listen on `localhost`
+        - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:4200 &
+
+      before_script:
+        - 'sudo chown root /opt/google/chrome/chrome-sandbox'
+        - 'sudo chmod 4755 /opt/google/chrome/chrome-sandbox'
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
+      script:
+        - yarn build
+        - yarn build:demo
+        - yarn bundlesize
+        - yarn lint:ngx-ui-switch
+        - yarn test:ci
+        - yarn e2e:ci
+        - yarn typedoc
     - stage: deploy github pages
       if: tag IS present
       script:
