--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "rimraf dist && ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --prod --base-href=/ngx-ui-switch/demo/ --output-path=demo",
     "release": "cd dist/packages-dist && yarn publish",
-    "bundlesize": "bundlesize",
+    "bundlewatch": "bundlewatch",
     "test": "ng test",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
     "cleanup": "rimraf build dist waste deploy demo docs",
@@ -62,7 +62,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.0.30",
     "all-contributors-cli": "^5.10.0",
-    "bundlesize": "^0.17.2",
+    "bundlewatch": "^0.2.5",
     "codelyzer": "^5.0.0",
     "copy": "^0.3.1",
     "fs-extra": "^7.0.0",
@@ -86,7 +86,7 @@
     "typescript": "~3.4.5"
   },
   "angular-cli": {},
-  "bundlesize": [
+  "bundlewatch": [
     {
       "path": "./dist/packages-dist/ui-switch.umd.js",
       "maxSize": "8 kB"
