build(dependencies): Update protractor
* Update travis ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,19 +10,32 @@ addons:
   chrome: stable
 
 stages:
-  - build
-  - deploy github pages
+  - test
+  - name: build
+    if: branch = master
+  - name: deploy github pages
+    if: tag IS present
 
 jobs:
   include:
-    - stage: build
-      branches:
-        only:
-          - master
-
+    - stage: test
       # https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-the-Chrome-addon-in-the-headless-mode
       before_install:
         # start your web application and listen on `localhost`
+        - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:4200 &
+
+      before_script:
+        - 'sudo chown root /opt/google/chrome/chrome-sandbox'
+        - 'sudo chmod 4755 /opt/google/chrome/chrome-sandbox'
+
+      script:
+        - yarn build
+        - yarn build:demo
+        - yarn lint:ngx-ui-switch
+        - yarn test:ci
+        - yarn e2e:ci
+    - stage: build
+      before_install:
         - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:4200 &
 
       before_script:
@@ -40,26 +53,7 @@ jobs:
         - yarn test:ci
         - yarn e2e:ci
         - yarn typedoc
-    - stage: build
-      branches:
-        except:
-          - master
-
-      before_install:
-        - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost:4200 &
-
-      before_script:
-        - 'sudo chown root /opt/google/chrome/chrome-sandbox'
-        - 'sudo chmod 4755 /opt/google/chrome/chrome-sandbox'
-
-      script:
-        - yarn build
-        - yarn build:demo
-        - yarn lint:ngx-ui-switch
-        - yarn test:ci
-        - yarn e2e:ci
     - stage: deploy github pages
-      if: tag IS present
       script:
         - yarn build:demo
         - yarn typedoc
