--- a/src/lib/tsconfig-build.json
+++ b/src/lib/tsconfig-build.json
@@ -20,6 +20,7 @@
     "public_api.ts"
   ],
   "angularCompilerOptions": {
+    "enableIvy": false,
     "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
