--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,9 +5,12 @@
     "baseUrl": "./",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "./main.ts",
+    "./polyfills.ts"
+  ],
+  "include": [
+    "./**/*.d.ts"
   ],
   "angularCompilerOptions": {
     "preserveWhitespaces": false
