fix(compile): Add resource inline
* Bumps version

--- a/src/lib/tsconfig-build.json
+++ b/src/lib/tsconfig-build.json
@@ -21,6 +21,7 @@
   ],
   "angularCompilerOptions": {
     "enableIvy": false,
+    "enableResourceInlining": true,
     "annotateForClosureCompiler": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
