--- a/renovate.json
+++ b/renovate.json
@@ -36,6 +36,9 @@
     "karma",
     "karma-cli",
     "karma-coverage-istanbul-reporter",
+    "rollup",
+    "rollup-plugin-filesize",
+    "rollup-plugin-sourcemaps",
     "rxjs",
     "tslint",
     "tsickle",
