chore(renovate): Update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -20,18 +20,18 @@
     }
   ],
   "ignoreDeps": [
+    "@angular-devkit/build-angular",
     "@angular/animations",
-    "@angular/common",
     "@angular/cli",
-    "@angular/compiler",
+    "@angular/common",
     "@angular/compiler-cli",
+    "@angular/compiler",
     "@angular/core",
     "@angular/forms",
     "@angular/language-service",
-    "@angular/platform-browser",
     "@angular/platform-browser-dynamic",
+    "@angular/platform-browser",
     "@angular/router",
-    "@angular-devkit/build-angular",
     "all-contributors-cli",
     "jasmine-core",
     "jasmine-spec-reporter",
@@ -39,12 +39,13 @@
     "karma-coverage-istanbul-reporter",
     "karma-jasmine-html-reporter",
     "karma-jasmine",
-    "rollup",
+    "karma",
     "rollup-plugin-filesize",
     "rollup-plugin-sourcemaps",
+    "rollup",
     "rxjs",
-    "tslint",
     "tsickle",
+    "tslint",
     "typedoc",
     "typescript",
     "zone.js"
