--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "~10.0.4",
-    "@angular/compiler-cli": "~10.0.5",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.0",
     "@angular/language-service": "^10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
