chore(renovate): Update ignore

--- a/renovate.json
+++ b/renovate.json
@@ -32,7 +32,9 @@
     "@angular/platform-browser-dynamic",
     "@angular/platform-browser",
     "@angular/router",
+    "@types/jasmine",
     "all-contributors-cli",
+    "bootstrap",
     "jasmine-core",
     "jasmine-spec-reporter",
     "karma-chrome-launcher",
