--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-ui-switch",
-  "version": "10.0.2",
+  "version": "11.0.0",
   "description": "switch button for angular4",
   "bugs": "https://github.com/webcat12345/ngx-ui-switch/issues",
   "homepage": "https://github.com/webcat12345/ngx-ui-switch#readme",
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --aot",
+    "start": "ng serve",
     "build": "rimraf dist && ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --prod --base-href=/ngx-ui-switch/demo/ --output-path=demo",
     "release": "cd dist/packages-dist && yarn publish",
@@ -37,28 +37,28 @@
     "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
   },
   "dependencies": {
-    "@angular/animations": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/forms": "^10.0.0",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "@angular/router": "^10.0.0",
+    "@angular/animations": "^11.2.14",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.5.2",
-    "tslib": "^1.9.0",
+    "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "^10.0.0",
-    "@angular/compiler-cli": "^10.0.0",
-    "@angular/language-service": "^10.0.0",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.1102.14",
+    "@angular/cli": "^11.2.14",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.0",
     "all-contributors-cli": "^5.10.0",
@@ -66,24 +66,24 @@
     "codelyzer": "^6.0.0",
     "copy": "^0.3.1",
     "fs-extra": "^7.0.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.7.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "node-sass": "^4.12.0",
     "protractor": "~7.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.52.1",
     "rollup-plugin-filesize": "^1.4.2",
     "rollup-plugin-sourcemaps": "^0.4.2",
+    "sass": "^1.35.1",
     "ts-node": "~10.0.0",
     "tsickle": "^0.39.0",
     "tslint": "~6.1.0",
     "typedoc": "^0.14.2",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.6"
   },
   "angular-cli": {},
   "bundlewatch": [
