--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-ui-switch",
-  "version": "12.0.1",
+  "version": "13.0.0",
   "description": "switch button for angular4",
   "bugs": "https://github.com/webcat12345/ngx-ui-switch/issues",
   "homepage": "https://github.com/webcat12345/ngx-ui-switch#readme",
@@ -26,12 +26,10 @@
     "build": "rimraf dist && ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --configuration production --base-href=/ngx-ui-switch/demo/ --output-path=demo",
     "release": "cd dist/packages-dist && yarn publish",
-    "bundlewatch": "bundlewatch",
     "test": "ng test",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
     "cleanup": "rimraf build dist waste deploy demo docs",
     "lint": "ng lint",
-    "lint:ngx-ui-switch": "ng lint ngx-ui-switch --type-check",
     "e2e": "ng e2e",
     "e2e:ci": "ng e2e --protractor-config=protractor-ci.conf.js",
     "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
@@ -54,16 +52,22 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "^13.1.2",
     "@angular/compiler-cli": "^13.1.1",
     "@angular/language-service": "^13.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "all-contributors-cli": "^5.10.0",
-    "bundlewatch": "^0.2.5",
-    "codelyzer": "^6.0.0",
     "copy": "^0.3.1",
+    "eslint": "^8.2.0",
     "fs-extra": "^7.0.0",
     "jasmine-core": "~3.7.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -80,7 +84,6 @@
     "sass": "^1.35.1",
     "ts-node": "~10.2.0",
     "tsickle": "^0.39.0",
-    "tslint": "~6.1.0",
     "typedoc": "^0.14.2",
     "typescript": "~4.5.4"
   },
