--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "rimraf dist && ts-node -P tsconfig.build.json build.ts",
+    "build": "ng-packagr -p src/lib/package.json",
+    "postbuild": "ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --configuration production --base-href=/ngx-ui-switch/demo/ --output-path=demo",
-    "release": "cd dist/packages-dist && yarn publish",
+    "release": "cd dist && yarn publish",
     "test": "ng test",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
     "cleanup": "rimraf build dist waste deploy demo docs",
@@ -35,38 +36,37 @@
     "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
   },
   "dependencies": {
-    "@angular/animations": "^13.1.1",
-    "@angular/common": "^13.1.1",
-    "@angular/compiler": "^13.1.1",
-    "@angular/core": "^13.1.1",
-    "@angular/forms": "^13.1.1",
-    "@angular/platform-browser": "^13.1.1",
-    "@angular/platform-browser-dynamic": "^13.1.1",
-    "@angular/router": "^13.1.1",
+    "@angular/animations": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/forms": "^13.0.0",
+    "@angular/platform-browser": "^13.0.0",
+    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/router": "^13.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.1",
     "font-awesome": "^4.7.0",
-    "rxjs": "^6.5.2",
+    "rxjs": "^7.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "^13.1.2",
-    "@angular/compiler-cli": "^13.1.1",
-    "@angular/language-service": "^13.1.1",
+    "@angular-devkit/build-angular": "^13.0.0",
+    "@angular-eslint/builder": "^13.0.0",
+    "@angular-eslint/eslint-plugin": "^13.0.0",
+    "@angular-eslint/eslint-plugin-template": "^13.0.0",
+    "@angular-eslint/schematics": "^13.0.0",
+    "@angular-eslint/template-parser": "^13.0.0",
+    "@angular/cli": "^13.0.0",
+    "@angular/compiler-cli": "^13.0.0",
+    "@angular/language-service": "^13.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.0",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "all-contributors-cli": "^5.10.0",
-    "copy": "^0.3.1",
     "eslint": "^8.2.0",
     "fs-extra": "^7.0.0",
     "jasmine-core": "~3.7.0",
@@ -76,22 +76,12 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^13.2.1",
     "protractor": "~7.0.0",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.52.1",
-    "rollup-plugin-filesize": "^1.4.2",
-    "rollup-plugin-sourcemaps": "^0.4.2",
     "sass": "^1.35.1",
     "ts-node": "~10.2.0",
     "tsickle": "^0.39.0",
     "typedoc": "^0.14.2",
     "typescript": "~4.5.4"
-  },
-  "angular-cli": {},
-  "bundlewatch": [
-    {
-      "path": "./dist/packages-dist/ui-switch.umd.js",
-      "maxSize": "8 kB"
-    }
-  ]
+  }
 }
