--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "ngx-ui-switch",
   "version": "13.0.0",
   "description": "switch button for angular4",
@@ -16,13 +17,22 @@
     "switch",
     "ui"
   ],
-  "main": "./ui-switch.umd.js",
-  "module": "./ui-switch.es5.js",
-  "es2015": "./ui-switch.es2015.js",
-  "typings": "./index.d.ts",
   "peerDependencies": {
     "@angular/core": ">=5.0.0 <13.0.0",
+    "@angular/animations": ">=5.0.0 <13.0.0",
     "@angular/common": ">=5.0.0 <13.0.0",
-    "@angular/forms": ">=5.0.0 <13.0.0"
+    "@angular/forms": ">=5.0.0 <13.0.0",
+    "@angular/platform-browser": ">=5.0.0 <13.0.0"
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "public_api.ts"
+    },
+    "dest": "../../dist"
+  },
+  "exports": {
+    "./ui-switch.component": {
+      "sass": "./ui-switch.component.scss"
+    }
   }
 }
