--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.0",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "all-contributors-cli": "^5.10.0",
     "eslint": "^8.2.0",
     "fs-extra": "^7.0.0",
@@ -79,7 +79,7 @@
     "ng-packagr": "^13.2.1",
     "protractor": "~7.0.0",
     "sass": "^1.35.1",
-    "ts-node": "~10.2.0",
+    "ts-node": "^10.2.0",
     "tsickle": "^0.39.0",
     "typedoc": "^0.14.2",
     "typescript": "~4.5.4"
