Support for angular 14

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-ui-switch",
-  "version": "13.0.2",
+  "version": "14.0.0",
   "description": "switch button for angular4",
   "bugs": "https://github.com/webcat12345/ngx-ui-switch/issues",
   "homepage": "https://github.com/webcat12345/ngx-ui-switch#readme",
@@ -23,7 +23,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng-packagr -p src/lib/package.json",
+    "build": "ng-packagr -p src/lib/ng-package.json",
     "postbuild": "ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --configuration production --base-href=/ngx-ui-switch/demo/ --output-path=demo",
     "release": "cd dist && yarn publish",
@@ -36,14 +36,14 @@
     "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
   },
   "dependencies": {
-    "@angular/animations": "^13.0.0",
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
-    "@angular/router": "^13.0.0",
+    "@angular/animations": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
@@ -51,36 +51,36 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.0",
-    "@angular-eslint/builder": "^13.0.0",
-    "@angular-eslint/eslint-plugin": "^13.0.0",
-    "@angular-eslint/eslint-plugin-template": "^13.0.0",
-    "@angular-eslint/schematics": "^13.0.0",
-    "@angular-eslint/template-parser": "^13.0.0",
-    "@angular/cli": "^13.0.0",
-    "@angular/compiler-cli": "^13.0.0",
-    "@angular/language-service": "^13.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^16.0.0",
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular-eslint/builder": "^14.0.0",
+    "@angular-eslint/eslint-plugin": "^14.0.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-eslint/schematics": "^14.0.0",
+    "@angular-eslint/template-parser": "^14.0.0",
+    "@angular/cli": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
+    "@types/jasmine": "^4.3.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^18.7.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "all-contributors-cli": "^5.10.0",
     "eslint": "^8.2.0",
     "fs-extra": "^10.0.0",
-    "jasmine-core": "~3.7.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^13.2.1",
+    "ng-packagr": "^14.0.0",
     "protractor": "~7.0.0",
     "sass": "^1.35.1",
-    "ts-node": "^10.2.0",
-    "tsickle": "^0.39.0",
+    "ts-node": "^10.9.1",
+    "tsickle": "^0.46.3",
     "typedoc": "^0.14.2",
-    "typescript": "~4.5.2"
+    "typescript": "^4.7.4"
   }
 }
