Revert "chore(ng-packagr): Remove deprecated config"
This reverts commit f3149f510014c2c7251ddfd984ecc38d2e043536.

--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -22,5 +22,16 @@
     "@angular/common": ">=10.0.0",
     "@angular/forms": ">=10.0.0",
     "@angular/platform-browser": ">=10.0.0"
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "public_api.ts"
+    },
+    "dest": "../../dist"
+  },
+  "exports": {
+    "./ui-switch.component": {
+      "sass": "./ui-switch.component.scss"
+    }
   }
 }
