--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/router": "^14.0.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
