--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "ng-packagr -p src/lib/ng-package.json",
     "postbuild": "ts-node -P tsconfig.build.json build.ts",
     "build:demo": "rimraf demo && ng build --aot --configuration production --base-href=/ngx-ui-switch/demo/ --output-path=demo",
-    "prerelease": "ng-packagr -p src/lib/ng-package.json",
+    "prerelease": "yarn run build",
     "release": "cd dist && npm publish",
     "test": "ng test",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false",
