--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cleanup": "rimraf build dist waste deploy demo docs",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "e2e:ci": "ng e2e --protractor-config=protractor-ci.conf.js",
+    "e2e:ci": "ng run ngx-ui-switch:cypress-run",
     "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
   },
   "dependencies": {
@@ -77,7 +77,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^16.1.0",
-    "protractor": "~7.0.0",
     "sass": "^1.35.1",
     "ts-node": "^10.9.1",
     "tsickle": "^0.46.3",
