--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "e2e:ci": "ng run ngx-ui-switch:cypress-run",
-    "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts"
+    "typedoc": "typedoc --options typedoc.json src/lib/*.ts && ts-node -P tsconfig.build.json docs.ts",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@angular/animations": "^16.1.8",
@@ -61,6 +63,7 @@
     "@angular/cli": "^16.1.7",
     "@angular/compiler-cli": "^16.1.8",
     "@angular/language-service": "^16.1.8",
+    "@cypress/schematic": "2.5.1",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^18.7.12",
@@ -81,6 +84,7 @@
     "ts-node": "^10.9.1",
     "tsickle": "^0.46.3",
     "typedoc": "^0.14.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "cypress": "latest"
   }
 }
