--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  build-and-lint:
+  integration-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
