ci(actions): Actions bot

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -32,3 +32,5 @@ jobs:
         with:
           branch: gh-pages
           folder: pages
+          git-config-name: github-actions[bot]
+          git-config-email: github-actions[bot]@users.noreply.github.com
