chore(renovate): Use recommended

--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,7 @@
 {
   "extends": [
-    "config:base",
-    ":preserveSemverRanges",
-    "monorepo:angular"
+    "config:recommended",
+    ":preserveSemverRanges"
   ],
   "packageRules": [
     {
