--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -3,7 +3,7 @@ name: Deploy demo and docs to GitHub pages
 on:
   push:
     tags: ['*']
-  workflow_dispatch:
+  # workflow_dispatch:
 
 jobs:
   build-and-deploy:
