chore(project): Upgrade renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,17 @@
       ],
       "semanticCommitType": "feat",
       "semanticCommitScope": "dependencies"
+    },
+    {
+      "packagePatterns": [
+        "@angular",
+        "angular"
+      ],
+      "depTypeList": [
+        "dependencies"
+      ],
+      "semanticCommitType": "feat!",
+      "semanticCommitScope": "dependencies"
     }
   ],
   "ignoreDeps": [
