--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "cypress:run": "cypress run"
   },
   "dependencies": {
-    "@angular/animations": "^16.1.8",
-    "@angular/common": "^16.1.8",
-    "@angular/compiler": "^16.1.8",
-    "@angular/core": "^16.1.8",
-    "@angular/forms": "^16.1.8",
-    "@angular/platform-browser": "^16.1.8",
-    "@angular/platform-browser-dynamic": "^16.1.8",
-    "@angular/router": "^16.1.8",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/router": "^16.0.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^7.5.5",
@@ -54,23 +54,24 @@
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.7",
-    "@angular-eslint/builder": "^16.1.0",
-    "@angular-eslint/eslint-plugin": "^16.1.0",
-    "@angular-eslint/eslint-plugin-template": "^16.1.0",
-    "@angular-eslint/schematics": "^16.1.0",
-    "@angular-eslint/template-parser": "^16.1.0",
-    "@angular/cli": "^16.1.7",
-    "@angular/compiler-cli": "^16.1.8",
-    "@angular/language-service": "^16.1.8",
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular-eslint/builder": "^16.0.0",
+    "@angular-eslint/eslint-plugin": "^16.0.0",
+    "@angular-eslint/eslint-plugin-template": "^16.0.0",
+    "@angular-eslint/schematics": "^16.0.0",
+    "@angular-eslint/template-parser": "^16.0.0",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/language-service": "^16.0.0",
     "@cypress/schematic": "2.5.2",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "all-contributors-cli": "^5.10.0",
-    "eslint": "^9.0.0",
+    "cypress": "^14.0.0",
+    "eslint": "^8.0.0",
     "fs-extra": "^11.0.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -84,7 +85,6 @@
     "ts-node": "^10.9.1",
     "tsickle": "^0.46.3",
     "typedoc": "^0.14.2",
-    "typescript": "^4.9.5",
-    "cypress": "latest"
+    "typescript": "^4.9.5"
   }
 }
