--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,14 @@
     "experimentalDecorators": true,
     "noUnusedLocals": true,
     "target": "ES2022",
+    "module": "ES2022",
     "skipLibCheck": true,
     "strictNullChecks": true,
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2016",
+      "ES2022",
       "dom"
     ],
     "useDefineForClassFields": false
