--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,14 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          cache: 'yarn'
 
-      - name: Install and Build 🔧
+      - name: Install dependencies 📦
+        run: yarn install --frozen-lockfile
+
+      - name: Build 🔧
         run: |
-          yarn install
           yarn build
+          yarn build:demo
