--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -15,11 +15,13 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          cache: 'yarn'
 
-      - name: Install and Build 🔧
+      - name: Install dependencies 📦
+        run: yarn install --frozen-lockfile
+
+      - name: Build 🔧
         run: |
-          yarn install
           yarn build:demo
           yarn typedoc
           mkdir pages
