ci(github): Add unit test workflow
- Update integration tests to run on pull requests

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,4 +1,4 @@
-name: Integration Tests
+name: Unit Tests
 
 on:
   pull_request:
@@ -17,6 +17,6 @@ jobs:
       - name: Install dependencies 📦
         run: yarn install --frozen-lockfile
 
-      - name: Run Integration tests 🧪
+      - name: Run Unit tests 🧪
         run: |
-          yarn e2e:ci
+          yarn test:ci
