--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-ui-switch",
-  "version": "16.1.0",
-  "description": "switch button for angular4",
+  "version": "20.1.3",
+  "description": "switch button for angular",
   "bugs": "https://github.com/webcat12345/ngx-ui-switch/issues",
   "homepage": "https://github.com/webcat12345/ngx-ui-switch#readme",
   "repository": "https://github.com/webcat12345/ngx-ui-switch.git",
@@ -9,11 +9,7 @@
   "author": "webcat12345",
   "private": true,
   "keywords": [
-    "angular 2",
-    "angular 4",
-    "angular 5",
-    "angular 6",
-    "angular 7",
+    "angular",
     "ngx",
     "ng2",
     "uiswitch",
@@ -40,52 +36,52 @@
     "validate:renovate": "npx --yes --package renovate -- renovate-config-validator --strict"
   },
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "^20.1.3",
+    "@angular/common": "^20.1.3",
+    "@angular/compiler": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@angular/platform-browser": "^20.1.3",
+    "@angular/platform-browser-dynamic": "^20.1.3",
+    "@angular/router": "^20.1.3",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
-    "rxjs": "^7.5.5",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.1"
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-eslint/builder": "^16.0.0",
-    "@angular-eslint/eslint-plugin": "^16.0.0",
-    "@angular-eslint/eslint-plugin-template": "^16.0.0",
-    "@angular-eslint/schematics": "^16.0.0",
-    "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular-devkit/build-angular": "^20.1.3",
+    "@angular-eslint/builder": "^17.0.0",
+    "@angular-eslint/eslint-plugin": "^17.0.0",
+    "@angular-eslint/eslint-plugin-template": "^17.0.0",
+    "@angular-eslint/schematics": "^17.0.0",
+    "@angular-eslint/template-parser": "^17.0.0",
+    "@angular/cli": "^20.1.3",
+    "@angular/compiler-cli": "^20.1.3",
+    "@angular/language-service": "^20.1.3",
     "@cypress/schematic": "2.5.2",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^22.0.0",
+    "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "all-contributors-cli": "^6.0.0",
     "cypress": "^14.0.0",
     "eslint": "^8.0.0",
     "fs-extra": "^11.0.0",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^16.1.0",
-    "sass": "^1.35.1",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "ng-packagr": "^20.1.3",
+    "sass": "^1.69.5",
     "ts-node": "^10.9.1",
-    "tsickle": "^0.46.3",
-    "typedoc": "^0.14.2",
-    "typescript": "^4.9.5"
+    "tsickle": "^0.47.1",
+    "typedoc": "^0.25.1",
+    "typescript": "~5.4.5"
   }
 }
