--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
+    "karma-coverage-istanbul-reporter": "^3.0.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "ng-packagr": "^20.0.0",
